--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,9 @@
     --color-subtitle: #888;
     --color-title: #222222;
     --color-text: #555;
+
+    --color-border-reviews: grey;
+    --color-company: #A5A6A7 ;
 }
 
 /* ESTRUCTURA PRINCIPAL*/
@@ -308,6 +311,7 @@ margin-top: 2.6rem;
     color: var(--color-principal);
     background-color: var(--color-secondary);
     white-space: nowrap;
+
     transition: all 300ms ease-in-out;
     border-radius: 3rem;
     font-size: 2rem;
@@ -320,10 +324,11 @@ margin-top: 2.6rem;
 
 
 
-/*SOBRE MI*/
+/*SOBRE MI y ESTUDIOS*/
 
 
-.content__about{
+.content__about,
+.content__resume{
     height: 100%;
     min-height: 100%;
     padding: 6rem;
@@ -333,20 +338,23 @@ margin-top: 2.6rem;
    }
 
 
-.about__header{
+.about__header,
+.resume__header{
     display: inline-block;
     margin-bottom: 4.5rem;
 
 
 }
 
-.about__title{
-    font-size: 3.2rem;
+.about__title,
+.resume__title{
+    font-size: 3.5rem;
     position: relative;
     
 }
 
-.about__title::after{
+.about__title::after,
+.resume__title::after{
     content: "";
     position: absolute;
     top: 20px;
@@ -407,24 +415,31 @@ margin-top: 2.6rem;
 
 
 /*servicion maquetado*/
-.about__services{
+.about__services,
+.about__reviews{
     width: 100%;
     margin-bottom: 3rem;
 
 }
 
-.services__header{
+.services__header,
+.reviews__header,
+.resume__subheader{
     display: inline-block;
     padding-right: 1.2rem;
-    position: relative;
     margin-bottom: 2.5rem;
+    position: relative;
 }
 
-.services__title{
+.services__title,
+.reviews__title,
+.resume__subtitle{
     font-size: 2.1rem;
 }
 
-.services__title::after{
+.services__title::after,
+.reviews__title::after,
+.resume__subtitle::after{
     content: "";
     position: absolute;
     top: 15px;
@@ -455,4 +470,153 @@ margin-top: 2.6rem;
     color: var(--color-secondary);
     font-size: 3.8rem;
 
+}
+
+.serice__title{
+    font-size: 1.8rem;
+    margin: 0.5rem 0;
+
+}
+
+.service__description{
+    font-size: 1.5rem;
+    text-align: justify;
+
+}
+
+/*Maquetaddo de review*/
+
+.reviews__container{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+   
+    
+}
+
+.reviews__review{
+    flex-basis: calc(50% - 2.5rem);
+    margin-top: 2.5rem;
+
+    border: 1px solid var(--color-border-reviews);
+    border-radius: 2rem;
+    padding-top: 0;
+    padding-right: 2.5rem;
+    padding-left: 2.5rem;
+    padding-bottom: 1.5rem;
+    margin-right: 2.5rem;
+}
+
+/* Resume timeline*/
+
+.resume__container{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+
+
+}
+
+.resume__left{
+    flex-basis: 50%;
+    margin-right: 1.5rem;
+
+
+}
+.resume__timelines{
+    margin-bottom: 5rem;
+
+}
+.timelines__timeline{
+    position: relative;
+    display: flex;
+
+    flex-direction: row;
+    margin-bottom: 1.5rem;
+
+
+}
+
+.timeline__header{
+    flex-basis: 30%;
+    text-align: right;
+    padding-right: 2.5rem;
+
+
+}
+
+.timeline__year{
+    margin: 0.3rem 0;
+    line-height: 1.9rem;
+    font-size: 1.4rem;
+}
+.timeline__company{
+    display: block;
+    font-size:1.3rem;
+    font-weight: lighter;
+    color: var(--color-company);
+}
+
+.timeline__description{
+    width: 70%;
+    padding-left: 2.5rem;
+    padding-right: 1.5rem;
+
+}
+
+
+.timeline__title{
+    font-size: 1.6rem;
+    margin-bottom: 0.3rem;
+
+}
+
+.timeline__text{
+    font-size: 1.4rem;
+    margin-bottom: 1rem;
+
+}
+
+.timeline__divider{
+    width: 1px;
+    background-color: var(--color-subtitle);
+    position: absolute;
+    top: 0;
+    left: 30%;
+    bottom: -18px;
+
+}
+
+.timeline__divider::before{
+    content: "";
+    position: absolute;
+    margin-top: 0.4rem;
+    margin-left: -0.8rem;
+    width: 1.7rem;
+    height: 1.7rem;
+    background-color: var(--color-secondary);
+    border-radius: 1rem;
+    opacity: 0.25;
+}
+    
+
+.timeline__divider::after{
+        content: "";
+        position: absolute;
+        margin-top: 0.4rem;
+        margin-left: -0.8rem;
+        width: 0.9rem;
+        height: 0.9rem;
+        background-color: var(--color-principal);
+        border-radius: 1rem;
+        
+
+}
+
+
+
+/*bloque derecha*/
+
+.resume__right{
+    flex-basis: 41%;
 }
